fix: decorations no longer overlap certain elements

--- a/assets/styles/voting.scss
+++ b/assets/styles/voting.scss
@@ -17,6 +17,7 @@ body {
   background: rgba(0, 0, 0, 0.2);
   z-index: 20;
   margin: 0 auto;
+  position: relative;
 
   @media screen and (max-width: 1400px) {
     width: 100%;
